[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameplay/ship.gd" type="Script" id=1]
[ext_resource path="res://gameplay/RotationSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/cc0_rubberduck/synth_laser_02.ogg" type="AudioStream" id=3]
[ext_resource path="res://gameplay/Weapon.gd" type="Script" id=4]

[node name="ship" type="RigidBody2D"]
collision_mask = 2147483648
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_screen = false

[node name="RotationSprite" parent="." instance=ExtResource( 2 )]

[node name="EngineGlowSprite" parent="." instance=ExtResource( 2 )]
visible = false

[node name="team_set_label" type="Label" parent="."]
visible = false
margin_left = -19.5998
margin_top = 24.0543
margin_right = 20.4002
margin_bottom = 38.0543
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapons" type="Node2D" parent="."]

[node name="Weapon" type="Node2D" parent="weapons"]
script = ExtResource( 4 )

[node name="shot_sfx" type="AudioStreamPlayer2D" parent="weapons/Weapon"]
stream = ExtResource( 3 )

[node name="CooldownTimer" type="Timer" parent="weapons/Weapon"]
one_shot = true
autostart = true
[connection signal="timeout" from="weapons/Weapon/CooldownTimer" to="weapons/Weapon" method="_on_CooldownTimer_timeout"]
